[package]
name = "skatteverket-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.7.0"
reqwest = {version = "0.11.25", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
prettytable-rs = "^0.10"
colored = "2.1.0"
